[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-system"
version = "1.3.2"
description = "多 Agent 记忆同步系统"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = [
    "pystray>=0.19",
    "Pillow>=9.0",
]
vector = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.scripts]
agent-memory = "agent_memory:main"
